Added hooks to all D3D11 Draw functions
The draw functions are not being called though...

--- a/Redmatch2Bot/Redmatch2Bot.vcxproj
+++ b/Redmatch2Bot/Redmatch2Bot.vcxproj
@@ -189,6 +189,9 @@
   <ItemGroup>
     <None Include="vcpkg.json" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="METHODSTABLE.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
 </Project>
