--- a/Redmatch2Bot/Redmatch2Bot.vcxproj
+++ b/Redmatch2Bot/Redmatch2Bot.vcxproj
@@ -172,19 +172,23 @@
   <ItemGroup>
     <ClInclude Include="bot.hpp" />
     <ClInclude Include="framework.h" />
-    <ClInclude Include="kiero.h" />
+    <ClInclude Include="kiero\kiero.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="themmokhtar\d3d11\fingerprint.hpp" />
+    <ClInclude Include="themmokhtar\d3d11\shaders.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bot.cpp" />
     <ClCompile Include="dllmain.cpp" />
-    <ClCompile Include="kiero.cpp" />
+    <ClCompile Include="kiero\kiero.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="themmokhtar\d3d11\fingerprint.cpp" />
+    <ClCompile Include="themmokhtar\d3d11\shaders.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="vcpkg.json" />
